Work for #8356 - 'Freeze the progress bar' option or make it a default behavior - Fixed title bottom line visibility

--- a/src/defaultV2-theme/blocks/sd-title.scss
+++ b/src/defaultV2-theme/blocks/sd-title.scss
@@ -15,6 +15,8 @@
   font-family: $font-family;
   gap: calcSize(4);
   box-shadow: 0px 2px 0px $primary;
+  position: relative;
+  z-index: 1;
 
   .sd-logo.sv-logo--right {
     margin-left: auto;
